# onetoken

./: .gitignore  README.md  build_and_publish.sh  check_code.sh  pyproject.toml  pyproject.toml.bak  pyproject_old.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: python-package.yml
notes/: gemini_think_i_cant.md
onetoken/: __init__.py  classifier.py
playground/: classifier_playground.ipynb  classifier_playground.py  setup_hf.py  test_cpu_inferece.py  test_gemma_classifier.py
src/onetokenpy/: __init__.py
tests/: test_classifier.py
